OutfitSales/src/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>Cart__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cart</label>
        <referenceTo>Cart__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Outfit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Outfit</label>
        <referenceTo>Outfit__c</referenceTo>
        <relationshipLabel>Products</relationshipLabel>
        <relationshipName>Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Stock__c</fullName>
        <label>Stock</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>